# pi-videokiosk

./: .gitignore  Makefile  README.md  bootstrap.sh  install.sh  pyproject.toml  requirements.txt
sounds/: .gitkeep
src/: __init__.py  __main__.py  audio.py  config.py  debug_log.py  idle_screen.py  main.py  rate_limiter.py  scanner_listener.py  url_parser.py  video_service.py
src/web/: __init__.py  app.py
tests/: test_config.py  test_rate_limiter.py  test_url_parser.py
